[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/Enemy_Shroomman/Enemy_Shroomman_Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Arm.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Shroomman.gd" type="Script" id=7]
[ext_resource path="res://themes/Enemybar2.tres" type="StyleBox" id=8]
[ext_resource path="res://themes/Enemybar1.tres" type="StyleBox" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.5466
height = 23.6183

[sub_resource type="Animation" id=2]
resource_name = "Die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.12828, 23.9697 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.11275, 23.9697 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 21.0378, 23.7193 )

[node name="ShroomMan" type="KinematicBody2D"]
collision_layer = 14
collision_mask = 14
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.4295, 0 )
shape = SubResource( 1 )

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 15.876, -0.0487723 )
enabled = true
collision_mask = 6

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -20.779, -0.699047 )
enabled = true
collision_mask = 6

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = -36.0
margin_right = 17.0
margin_bottom = -30.0
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 8 )
max_value = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="Arm" parent="." instance=ExtResource( 2 )]
position = Vector2( -1.53679, -6.45451 )

[node name="LeftArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
visible = false
position = Vector2( -17.3158, -0.785755 )
shape = SubResource( 5 )

[node name="RightArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
visible = false
position = Vector2( 9.97657, -0.364361 )
shape = SubResource( 6 )

[node name="Sight" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
visible = false
position = Vector2( -4.25587, -0.30735 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
[connection signal="dead" from="." to="." method="_on_ShroomMan_dead"]
[connection signal="body_entered" from="Arm" to="." method="_on_Arm_body_entered"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
